{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 175,
  "lineage": "fe280378-42e2-8399-a452-6ec2da5a6e97",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:internet-gateway/igw-0a1abd6739f630822",
            "id": "igw-0a1abd6739f630822",
            "owner_id": "992382765278",
            "tags": {
              "Name": "Main Internet Gateway"
            },
            "tags_all": {
              "Name": "Main Internet Gateway"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099ccf5a30182a35e",
            "arn": "arn:aws:ec2:ap-south-1:992382765278:elastic-ip/eipalloc-099ccf5a30182a35e",
            "association_id": "eipassoc-0669238381da72de4",
            "domain": "vpc",
            "id": "eipalloc-099ccf5a30182a35e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07cb5971dac7e04c5",
            "private_dns": "ip-10-16-53-105.ap-south-1.compute.internal",
            "private_ip": "10.16.53.105",
            "public_dns": "ec2-65-0-242-41.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.242.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099ccf5a30182a35e",
            "association_id": "eipassoc-0669238381da72de4",
            "connectivity_type": "public",
            "id": "nat-04a8afece4267c818",
            "network_interface_id": "eni-07cb5971dac7e04c5",
            "private_ip": "10.16.53.105",
            "public_ip": "65.0.242.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dd2a504097b5c0e6",
            "tags": {
              "Name": "Common NAT Gateway"
            },
            "tags_all": {
              "Name": "Common NAT Gateway"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:route-table/rtb-0b7825d03e4819124",
            "id": "rtb-0b7825d03e4819124",
            "owner_id": "992382765278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1abd6739f630822",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_app_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:route-table/rtb-05534cb4339e5daae",
            "id": "rtb-05534cb4339e5daae",
            "owner_id": "992382765278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04a8afece4267c818",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private App-NAT Route Table"
            },
            "tags_all": {
              "Name": "Private App-NAT Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_db_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:route-table/rtb-09d001011c2506375",
            "id": "rtb-09d001011c2506375",
            "owner_id": "992382765278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04a8afece4267c818",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private DB-NAT Route Table"
            },
            "tags_all": {
              "Name": "Private DB-NAT Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_association_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ddde819971834d1",
            "route_table_id": "rtb-05534cb4339e5daae",
            "subnet_id": "subnet-0d6e713b59811c60e"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.route-tables.aws_route_table.pvt_app_nat",
            "module.subnets.aws_subnet.private_app_subnets",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_association_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e524b9f75d66a02",
            "route_table_id": "rtb-05534cb4339e5daae",
            "subnet_id": "subnet-058e3e97e3483f5a2"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.route-tables.aws_route_table.pvt_app_nat",
            "module.subnets.aws_subnet.private_app_subnets",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_association_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efd4b9e7259f7691",
            "route_table_id": "rtb-05534cb4339e5daae",
            "subnet_id": "subnet-0dbf6c94891a35b5d"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.route-tables.aws_route_table.pvt_app_nat",
            "module.subnets.aws_subnet.private_app_subnets",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_association_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0385bcf2a26c2f56d",
            "route_table_id": "rtb-09d001011c2506375",
            "subnet_id": "subnet-0e57e9f8ef29ad33f"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.route-tables.aws_route_table.pvt_db_nat",
            "module.subnets.aws_subnet.private_db_subnets",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_association_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcabfffe2ed6284d",
            "route_table_id": "rtb-09d001011c2506375",
            "subnet_id": "subnet-012681a0d8cec4140"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.route-tables.aws_route_table.pvt_db_nat",
            "module.subnets.aws_subnet.private_db_subnets",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_association_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3f7f36a1aba4848",
            "route_table_id": "rtb-09d001011c2506375",
            "subnet_id": "subnet-03b50abec9068bb85"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat_gateway",
            "module.route-tables.aws_route_table.pvt_db_nat",
            "module.subnets.aws_subnet.private_db_subnets",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0887069b3ece01c15",
            "route_table_id": "rtb-0b7825d03e4819124",
            "subnet_id": "subnet-0dd2a504097b5c0e6"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.route-tables.aws_route_table.pb_rt",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e898735ca334d51e",
            "route_table_id": "rtb-0b7825d03e4819124",
            "subnet_id": "subnet-07514c97ee9537cf1"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.route-tables.aws_route_table.pb_rt",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02255b64850d5e132",
            "route_table_id": "rtb-0b7825d03e4819124",
            "subnet_id": "subnet-0c80259e36271abd8"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.route-tables.aws_route_table.pb_rt",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:security-group/sg-0d1e7bbf2de14e2af",
            "description": "It will allow traffic from outside to land",
            "egress": [],
            "id": "sg-0d1e7bbf2de14e2af",
            "ingress": [],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "992382765278",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:security-group/sg-09924ed67a6be5dac",
            "description": "It will allow almost all types of traffic to public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09924ed67a6be5dac",
            "ingress": [],
            "name": "pg-sn-sg",
            "name_prefix": "",
            "owner_id": "992382765278",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pvt_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:security-group/sg-050a7d5d3d756e0a4",
            "description": "It will allow traffic between public subnet and pvt-app-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050a7d5d3d756e0a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09924ed67a6be5dac"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "pvt-app-sg",
            "name_prefix": "",
            "owner_id": "992382765278",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pvt_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:security-group/sg-05c49395e102944c7",
            "description": "It will manage traffic between public and private database subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c49395e102944c7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09924ed67a6be5dac"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "pvt-db-sg",
            "name_prefix": "",
            "owner_id": "992382765278",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_pb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2365945311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-097f47582dbd7b411",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 465,
            "id": "sgrule-1861074388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-0c3d1acac2af7b7ad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 465,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2253798649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-0f106931e55557e20",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32765,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2540381914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-01a119cf939693238",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-1343917071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-08b6c7dbb863714fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2670797260",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-0cef4f1fb013a1910",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 25,
            "id": "sgrule-3396734344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-059dbeba18cf2f85e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 25,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-1478236263",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-0ce65df3730ab9509",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-700152953",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09924ed67a6be5dac",
            "security_group_rule_id": "sgr-040090ff200ad115f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1315927082",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d1e7bbf2de14e2af",
            "security_group_rule_id": "sgr-08a5148da74dfbaa2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.lb_sg",
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2652919184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d1e7bbf2de14e2af",
            "security_group_rule_id": "sgr-0e79e165e65f43553",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securityGroup.aws_security_group.lb_sg",
            "module.securityGroup.aws_security_group.pb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-0d6e713b59811c60e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6e713b59811c60e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sn-az1"
            },
            "tags_all": {
              "Name": "private-sn-az1"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-058e3e97e3483f5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.16.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e3e97e3483f5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sn-az2"
            },
            "tags_all": {
              "Name": "private-sn-az2"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "az3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-0dbf6c94891a35b5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.16.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbf6c94891a35b5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sn-az3"
            },
            "tags_all": {
              "Name": "private-sn-az3"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-0e57e9f8ef29ad33f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e57e9f8ef29ad33f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-az1"
            },
            "tags_all": {
              "Name": "private-db-az1"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-012681a0d8cec4140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012681a0d8cec4140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-az2"
            },
            "tags_all": {
              "Name": "private-db-az2"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "az3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-03b50abec9068bb85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.16.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b50abec9068bb85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-az3"
            },
            "tags_all": {
              "Name": "private-db-az3"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-0dd2a504097b5c0e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd2a504097b5c0e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-sn-az1"
            },
            "tags_all": {
              "Name": "pb-sn-az1"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-07514c97ee9537cf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.16.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07514c97ee9537cf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-sn-az2"
            },
            "tags_all": {
              "Name": "pb-sn-az2"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "az3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:subnet/subnet-0c80259e36271abd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.16.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c80259e36271abd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382765278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-sn-az3"
            },
            "tags_all": {
              "Name": "pb-sn-az3"
            },
            "vpc_id": "vpc-01528b738d5bd89ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382765278:vpc/vpc-01528b738d5bd89ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-02cb7a8088bde0bb1",
            "default_route_table_id": "rtb-0d4f8e81c2741829a",
            "default_security_group_id": "sg-0c0bf746d582739a8",
            "dhcp_options_id": "dopt-0cb0914004d4ca4e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01528b738d5bd89ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4f8e81c2741829a",
            "owner_id": "992382765278",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}